logo.png added to SplashActivity

--- a/SimpleAudioPlayer/res/layout/activity_splash.xml
+++ b/SimpleAudioPlayer/res/layout/activity_splash.xml
@@ -6,5 +6,13 @@
     tools:context="mdev.master_j.simpleaudioplayer.SplashActivity"
     tools:ignore="MergeRootFrame" >
 
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:src="@drawable/logo"
+        tools:ignore="ContentDescription" />
+
 </FrameLayout>
 
