--- a/SimpleAudioPlayer/res/values/styles.xml
+++ b/SimpleAudioPlayer/res/values/styles.xml
@@ -16,5 +16,10 @@
     <style name="AppTheme_withoutBar" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
+    
+    <!-- Application theme. -->
+    <style name="AppTheme_withBar" parent="AppBaseTheme">
+        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+    </style>
 
 </resources>
