added `android:windowNoTitle` item in `AppTheme_withoutBar`

--- a/SimpleAudioPlayer/res/values/styles.xml
+++ b/SimpleAudioPlayer/res/values/styles.xml
@@ -4,6 +4,7 @@
     </style>
 
     <style name="AppTheme_withoutBar" parent="AppBaseTheme">
+        <item name="android:windowNoTitle">true</item>
     </style>
     
     <style name="AppTheme_withBar" parent="AppBaseTheme">
