--- a/SimpleAudioPlayer/res/values/dimens.xml
+++ b/SimpleAudioPlayer/res/values/dimens.xml
@@ -3,5 +3,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="song_title_size">25dp</dimen>
+    <dimen name="topOffset_main">40dp</dimen>
+    <dimen name="leftOffset_main">50dp</dimen>
 
 </resources>
