activity_main.xml now has RelativeLayout not LinearLayout; button for playback control added

--- a/SimpleAudioPlayer/res/values/dimens.xml
+++ b/SimpleAudioPlayer/res/values/dimens.xml
@@ -6,5 +6,6 @@
     <dimen name="song_title_size">25dp</dimen>
     <dimen name="topOffset_main">40dp</dimen>
     <dimen name="leftOffset_main">50dp</dimen>
+    <dimen name="bottomOffset_main">5dp</dimen>
 
 </resources>
