status string added on MainActivity

--- a/SimpleAudioPlayer/res/layout/activity_main.xml
+++ b/SimpleAudioPlayer/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     tools:ignore="MergeRootFrame" >
 
     <TextView
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/leftOffset_main"
@@ -14,11 +15,20 @@
         android:textSize="@dimen/song_title_size" />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/controlButton"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_marginBottom="@dimen/bottomOffset_main" />
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView2"
+        android:layout_below="@+id/textView2"
+        android:layout_marginTop="@dimen/statusOffset_main"
+        android:text="@string/status" />
 
 </RelativeLayout>
