--- a/SimpleAudioPlayer/res/values/dimens.xml
+++ b/SimpleAudioPlayer/res/values/dimens.xml
@@ -7,5 +7,6 @@
     <dimen name="topOffset_main">40dp</dimen>
     <dimen name="leftOffset_main">50dp</dimen>
     <dimen name="bottomOffset_main">5dp</dimen>
+    <dimen name="statusOffset_main">15dp</dimen>
 
 </resources>
