--- a/SimpleAudioPlayer/res/layout/activity_main.xml
+++ b/SimpleAudioPlayer/res/layout/activity_main.xml
@@ -34,11 +34,18 @@
         	android:layout_height="wrap_content" />
     	
     </LinearLayout>
-
-    <Button
-        android:id="@+id/controlButton"
-        android:layout_width="fill_parent"
+    
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/bottomOffset_main" />
+        android:layout_marginTop="@dimen/statusOffset_main" >
+
+    	<ImageView
+        	android:id="@+id/controlButton"
+        	android:layout_width="fill_parent"
+        	android:layout_height="wrap_content"
+        	android:layout_marginBottom="@dimen/bottomOffset_main" />
+    
+    </LinearLayout>
 
 </LinearLayout>
