--- a/SimpleAudioPlayer/res/layout/activity_main.xml
+++ b/SimpleAudioPlayer/res/layout/activity_main.xml
@@ -38,13 +38,21 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_horizontal"
         android:layout_marginTop="@dimen/statusOffset_main" >
 
     	<ImageView
         	android:id="@+id/playPauseButton"
-        	android:layout_width="fill_parent"
+        	android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
-        	android:layout_marginBottom="@dimen/bottomOffset_main" />
+        	android:src="@drawable/pause" />
+    	
+    	<ImageView
+    	    android:id="@+id/stopButton"
+    	    android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        	android:src="@drawable/stop" />
     
     </LinearLayout>
 
