--- a/SimpleAudioPlayer/res/layout/activity_main.xml
+++ b/SimpleAudioPlayer/res/layout/activity_main.xml
@@ -34,6 +34,12 @@
         	android:layout_height="wrap_content" />
     	
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/playbackProgressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
     
     <LinearLayout
         android:layout_width="match_parent"
