+contentDescription for Splash logo

--- a/SimpleAudioPlayer/res/layout/activity_splash.xml
+++ b/SimpleAudioPlayer/res/layout/activity_splash.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:src="@drawable/logo"
-        tools:ignore="ContentDescription" />
+        android:contentDescription="@string/contentDescription_appLogo" />
 
 </FrameLayout>
 
