--- a/SimpleAudioPlayer/res/layout/activity_main.xml
+++ b/SimpleAudioPlayer/res/layout/activity_main.xml
@@ -22,7 +22,6 @@
         android:layout_marginTop="@dimen/statusOffset_main" >
         
 		<TextView
-	        android:id="@+id/statusTextView_static_word"
         	android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
         	android:text="@string/status" />
@@ -37,6 +36,18 @@
     <ProgressBar
         android:id="@+id/playbackProgressBar"
         style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/leftOffset_main"
+        android:text="@string/volume" 
+        />
+
+    <SeekBar
+        android:id="@+id/volumeControlSeekBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     
